--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <!-- Footer -->
     <div class="foot"></div>
     <footer class="text-white text-center pb-5">
-      <p>Created with <i class="bi bi-heart-fill text-primary"></i> by <a href="https://github.com/Rtama23" class="text-white fw-bold"> Andini Nur Fauziah</a></p>
+      <p>Created with <i class="bi bi-heart-fill text-primary"></i> by <a href="https://instagram.com/andininurfauziah_?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" class="text-white fw-bold"> Andini Nur Fauziah</a></p>
     </footer>
   </div>
     <!-- Akhir Footer -->
