--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="jumbotron text-center">
       <img src="img/saya.jpeg" alt="Andini Nur Fauziah" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Andini Nur Fauziah</h1>
-      <p class="lead">Mahasiswa | Web Developer</p>
+      <p class="lead">Pelajar| Web Developer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -88,7 +88,7 @@
             <p>Saya adalah seorang siswi di SMK Negeri1 Bandar Pasir Mandoge, dan saya kelas XII jurusan Rekayasa Perangkat Lunak (RPL).</p>
           </div>
           <div class="col-md-4" data-aos="fade-left">
-            <p>Saya tinggal di pondok Afd3 Bp Mandoge Dusun IV Desa Huta Bagasan Kecamatan Bandar Pasir Mandoge Kabupaten Asahan</p>
+            <p>Saya tinggal di pondok Afd3 Dusun IV Desa Huta Bagasan Kecamatan Bandar Pasir Mandoge Kabupaten Asahan</p>
           </div>
         </div>
       </div>
