--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
           <div class="row">
             <div class="col-md-6 col-lg-4 mb-3">
               <div class="aset-box">
-                <h4 class="aset-name">Dark Blue</h4>
-                <img src="img/kaktus/1.png" alt="Dark Blue" class="aset-img" />
+                <h4 class="aset-name">Cardon </h4>
+                <img src="img/kaktus/1.png" alt="" class="aset-img" />
                 <a href="#" class="btn btn-light aset-detail-button">Show Details</a>
               </div>
             </div>
@@ -206,7 +206,7 @@
             </div>
             <div class="col-md-6 col-lg-4 mb-3">
               <div class="aset-box">
-                <h4 class="aset-name">Opuntia</h4>
+                <h4 class="aset-name">Prickly Pear Cactus</h4>
                 <img src="img/kaktus/7.png" alt="Blues Slim" class="aset-img" />
                 <a href="#" class="btn btn-light aset-detail-button">Show Details</a>
               </div>
