--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="jumbotron text-center">
       <img src="img/saya.jpeg" alt="Andini Nur Fauziah" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Andini Nur Fauziah</h1>
-      <p class="lead">Pelajar| Web Developer</p>
+      <p class="lead">Pelajar | Web Developer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -187,21 +187,21 @@
               <div class="aset-box">
                 <h4 class="aset-name">Black Red Combine</h4>
                 <img src="img/kaktus/4.png" alt="Red Dragon" class="aset-img" />
-                <a href="#" class="btn btn-light aset-detail-button">Show Details</a>
+                <a href="#" class="btn btn-light aset-detail-button"></a>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-3">
               <div class="aset-box">
                 <h4 class="aset-name">Dark Grey</h4>
                 <img src="img/kaktus/5.png" alt="Dark Grey" class="aset-img" />
-                <a href="#" class="btn btn-light aset-detail-button">Show Details</a>
+                <a href="#" class="btn btn-light aset-detail-button"></a>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-3">
               <div class="aset-box">
                 <h4 class="aset-name">Cereus Tetragonus</h4>
                 <img src="img/kaktus/6.png" alt="Kaktus Koboi" class="aset-img" />
-                <a href="#" class="btn btn-light aset-detail-button">Show Details</a>
+                <a href="#" class="btn btn-light aset-detail-button"></a>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-3">
@@ -215,14 +215,14 @@
               <div class="aset-box">
                 <h4 class="aset-name">Ferocactus</h4>
                 <img src="img/kaktus/8.png" alt="Purple Blue" class="aset-img" />
-                <a href="#" class="btn btn-light aset-detail-button">Show Details</a>
+                <a href="#" class="btn btn-light aset-detail-button"></a>
               </div>
             </div>
             <div class="col-md-6 col-lg-4 mb-3">
               <div class="aset-box">
                 <h4 class="aset-name">Old Man Cactus</h4>
                 <img src="img/kaktus/9.png" alt="Dark Tiger" class="aset-img" />
-                <a href="#" class="btn btn-light aset-detail-button">Show Details</a>
+                <a href="#" class="btn btn-light aset-detail-button"></a>
               </div>
             </div>
           </div>
